--- a/EEG_CHANNEL_IMAGE_MAKING.ipynb
+++ b/EEG_CHANNEL_IMAGE_MAKING.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFM66HrTkCkLp5YWtUcgVm",
+      "authorship_tag": "ABX9TyN/ZLoaL9iiMJ92m3hXgRj2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,6 +337,215 @@
         "# Run the Gradio app\n",
         "app.launch()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gradio as gr\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import shutil\n",
+        "import zipfile\n",
+        "from PIL import Image\n",
+        "\n",
+        "# 📌 Create base output directory\n",
+        "base_output_dir = \"output\"\n",
+        "os.makedirs(base_output_dir, exist_ok=True)\n",
+        "\n",
+        "# 🎨 **Fixed Color Mapping for Each Channel**\n",
+        "channel_colors = {\n",
+        "    \"Delta_TP9\": \"red\", \"Delta_AF7\": \"blue\", \"Delta_AF8\": \"green\", \"Delta_TP10\": \"purple\",\n",
+        "    \"Theta_TP9\": \"orange\", \"Theta_AF7\": \"cyan\", \"Theta_AF8\": \"magenta\", \"Theta_TP10\": \"black\",\n",
+        "    \"Alpha_TP9\": \"lime\", \"Alpha_AF7\": \"brown\", \"Alpha_AF8\": \"pink\", \"Alpha_TP10\": \"navy\",\n",
+        "    \"Beta_TP9\": \"gold\", \"Beta_AF7\": \"darkred\", \"Beta_AF8\": \"teal\", \"Beta_TP10\": \"indigo\",\n",
+        "    \"Gamma_TP9\": \"darkblue\", \"Gamma_AF7\": \"darkgreen\", \"Gamma_AF8\": \"salmon\", \"Gamma_TP10\": \"steelblue\",\n",
+        "    \"RAW_TP9\": \"olive\", \"RAW_AF7\": \"orchid\", \"RAW_AF8\": \"coral\", \"RAW_TP10\": \"dodgerblue\",\n",
+        "    \"AUX_RIGHT\": \"slategray\", \"Accelerometer_X\": \"yellow\", \"Accelerometer_Y\": \"chocolate\", \"Accelerometer_Z\": \"deepskyblue\",\n",
+        "    \"Gyro_X\": \"khaki\", \"Gyro_Y\": \"fuchsia\", \"Gyro_Z\": \"plum\", \"HeadBandOn\": \"mediumspringgreen\",\n",
+        "    \"HSI_TP9\": \"chartreuse\", \"HSI_AF7\": \"mediumvioletred\", \"HSI_AF8\": \"mediumblue\", \"HSI_TP10\": \"goldenrod\",\n",
+        "    \"Battery\": \"lawngreen\", \"Elements\": \"firebrick\"\n",
+        "}\n",
+        "\n",
+        "# ✅ Function to Process Multiple EEG Files\n",
+        "def process_eeg(files, channels, chunk_size):\n",
+        "    if not files:\n",
+        "        return \"❌ Error: Please upload at least one CSV file.\"\n",
+        "\n",
+        "    if not channels:\n",
+        "        return \"❌ Error: Please select at least one EEG channel.\"\n",
+        "\n",
+        "    output_folders = []\n",
+        "\n",
+        "    # 📌 Process Each Uploaded File\n",
+        "    all_image_files = []\n",
+        "    for file in files:\n",
+        "        df = pd.read_csv(file.name)\n",
+        "\n",
+        "        # Ensure valid file\n",
+        "        if df.shape[1] < 2:\n",
+        "            continue\n",
+        "\n",
+        "        # Extract Time Column\n",
+        "        time_column = df.columns[0]\n",
+        "\n",
+        "        # Extract file name without extension for output folder\n",
+        "        file_name = os.path.basename(file.name).replace('.csv', '')\n",
+        "\n",
+        "        # Create a separate folder for each file in the output directory\n",
+        "        output_folder = os.path.join(base_output_dir, file_name)\n",
+        "        if os.path.exists(output_folder):\n",
+        "            shutil.rmtree(output_folder)  # Clear old data\n",
+        "        os.makedirs(output_folder)\n",
+        "\n",
+        "        output_folders.append(output_folder)\n",
+        "\n",
+        "        # 📌 Generate EEG Images for Selected Channels\n",
+        "        total_chunks = len(df) // int(chunk_size)\n",
+        "        image_files = []\n",
+        "\n",
+        "        for i in range(total_chunks):\n",
+        "            chunk = df.iloc[i * int(chunk_size) : (i + 1) * int(chunk_size)]\n",
+        "\n",
+        "            plt.figure(figsize=(10, 5))\n",
+        "\n",
+        "            for channel in channels:\n",
+        "                if channel not in df.columns:\n",
+        "                    continue\n",
+        "\n",
+        "                # Plot all selected channels in one graph\n",
+        "                color = channel_colors.get(channel, \"black\")  # Use mapped color, default to black\n",
+        "                plt.plot(chunk[time_column], chunk[channel], color=color, linestyle='-', linewidth=1, label=channel)\n",
+        "\n",
+        "            plt.axis('off')  # Hide X and Y axes\n",
+        "            plt.xticks([])\n",
+        "            plt.yticks([])\n",
+        "            plt.legend(loc=\"upper right\", fontsize=8)  # Add legend to distinguish channels\n",
+        "\n",
+        "            # Save Image\n",
+        "            img_filename = f\"{output_folder}/EEG_chunk_{i+1}.png\"\n",
+        "            plt.savefig(img_filename, bbox_inches='tight', pad_inches=0)\n",
+        "            plt.close()\n",
+        "\n",
+        "            image_files.append(img_filename)\n",
+        "\n",
+        "        all_image_files.extend(image_files)\n",
+        "\n",
+        "    # ✅ Create a ZIP file containing all processed images\n",
+        "    zip_filename = \"eeg_processed_data.zip\"\n",
+        "    zip_path = os.path.join(base_output_dir, zip_filename)\n",
+        "\n",
+        "    with zipfile.ZipFile(zip_path, 'w') as zipf:\n",
+        "        for folder in output_folders:\n",
+        "            for root, _, files in os.walk(folder):\n",
+        "                for file in files:\n",
+        "                    file_path = os.path.join(root, file)\n",
+        "                    zipf.write(file_path, arcname=os.path.relpath(file_path, base_output_dir))\n",
+        "\n",
+        "    return zip_path, all_image_files  # Returns ZIP file & image list\n",
+        "\n",
+        "# ✅ Function to Load EEG Channels for Selection (Multi-Select)\n",
+        "def get_channels(files):\n",
+        "    if not files:\n",
+        "        return gr.update(choices=[], value=[])\n",
+        "\n",
+        "    df = pd.read_csv(files[0].name)  # Read first file to get channels\n",
+        "    channels = list(df.columns[1:])  # Return all EEG channels (excluding time column)\n",
+        "\n",
+        "    return gr.update(choices=channels, value=channels[:2] if channels else None)  # Pre-select 2 channels\n",
+        "\n",
+        "# ✅ Gradio UI Components\n",
+        "with gr.Blocks() as app:\n",
+        "    gr.Markdown(\"### 🧠 Multi-File EEG Signal Viewer with Multi-Channel Plotting & ZIP Download\")\n",
+        "\n",
+        "    # File Upload (Multiple Files)\n",
+        "    file_input = gr.Files(label=\"Upload EEG CSV Files\", file_types=[\".csv\"])\n",
+        "\n",
+        "    # Dynamic Multi-Channel Selection\n",
+        "    channel_selector = gr.CheckboxGroup(label=\"Select EEG Channels\", choices=[], interactive=True)\n",
+        "\n",
+        "    # Chunk Size Input\n",
+        "    chunk_input = gr.Number(label=\"Select Chunk Size\", value=256, interactive=True)\n",
+        "\n",
+        "    # Process Button\n",
+        "    process_button = gr.Button(\"Process EEG Data\")\n",
+        "\n",
+        "    # Output Images\n",
+        "    image_gallery = gr.Gallery(label=\"Generated EEG Images\", columns=3, height=400)\n",
+        "\n",
+        "    # Download Button (Initially hidden)\n",
+        "    zip_download = gr.File(label=\"Download Processed Images\", visible=False)\n",
+        "\n",
+        "    # Update channel list when files are uploaded\n",
+        "    file_input.change(fn=get_channels, inputs=[file_input], outputs=[channel_selector])\n",
+        "\n",
+        "    # Process data when button is clicked\n",
+        "    process_button.click(fn=process_eeg, inputs=[file_input, channel_selector, chunk_input], outputs=[zip_download, image_gallery])\n",
+        "\n",
+        "# Run the Gradio app\n",
+        "app.launch()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 646
+        },
+        "id": "sODHvcEHqM81",
+        "outputId": "1f1cc930-8621-432a-d472-6f1714a8f769"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+            "\n",
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://b547457e015109f9ae.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://b547457e015109f9ae.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iAc7Sxa6qM5Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1qBx1AvDqM3D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
